--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,12 @@
     font-size: 60px;
     font-weight: 800;
     text-transform: capitalize;
+    color: white;
+  }
+}
+@media screen and (max-width: 510px) {
+  .homePage .name {
+    font-size: 42px;
   }
 }
 @media screen and (max-width: 120000px) {
@@ -29,14 +35,14 @@
     position: absolute;
     height: 3px;
     width: 13px;
-    background-color: #212121;
+    background-color: white;
   }
   .header .container .burgerMenu .icon-left:before {
     transition-duration: 0.5s;
     position: absolute;
     width: 13px;
     height: 3px;
-    background-color: #212121;
+    background-color: white;
     content: "";
     top: -9px;
   }
@@ -45,7 +51,7 @@
     position: absolute;
     width: 13px;
     height: 3px;
-    background-color: #212121;
+    background-color: white;
     content: "";
     top: 9px;
   }
@@ -53,7 +59,7 @@
     position: absolute;
     height: 3px;
     width: 13px;
-    background-color: #212121;
+    background-color: white;
     right: 0;
   }
   .header .container .burgerMenu .icon-right:before {
@@ -61,7 +67,7 @@
     position: absolute;
     width: 13px;
     height: 3px;
-    background-color: #212121;
+    background-color: white;
     content: "";
     top: -9px;
   }
@@ -70,7 +76,7 @@
     position: absolute;
     width: 13px;
     height: 3px;
-    background-color: #212121;
+    background-color: white;
     content: "";
     top: 9px;
   }
@@ -100,17 +106,19 @@
     padding: 0;
     margin: 0;
   }
+  .header .container .routesCont ul .routeActive {
+    border-bottom: 1px solid white;
+  }
+  .header .container .routesCont ul .routeActive a {
+    color: white;
+  }
   .header .container .routesCont ul a {
     text-decoration: none;
     padding: 8px 15px;
     cursor: pointer;
     text-transform: capitalize;
     display: block;
-    color: black;
-  }
-  .header .container .routesCont ul .routeActive {
-    color: black;
-    border-bottom: 1px solid black;
+    color: #08fdd8;
   }
   .header .container .routesCont ul .liBottomHover::after {
     content: "";
@@ -124,8 +132,14 @@
     transition-timing-function: cubic-bezier(0.39, 0.575, 0.565, 1);
   }
   .header .container .routesCont ul .liBottomHover:hover:after {
-    background: black;
+    background: #08fdd8;
     width: 100%;
+  }
+  .header .container .routesCont .daynight {
+    width: 40px;
+    height: 40px;
+    margin-left: 30px;
+    cursor: pointer;
   }
 }
 @media screen and (max-width: 1200px) {
@@ -161,7 +175,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: red;
+    background-color: #1d1d1d;
     padding-top: 70px;
   }
   .header .container .routesCont ul {
@@ -395,6 +409,7 @@
     margin-bottom: 40px;
   }
   .contactPage .desc span {
+    color: #08fdd8;
     font-weight: 500;
   }
   .contactPage .contactForm {
@@ -405,28 +420,37 @@
     height: 50px;
     padding: 0px 20px;
   }
+  .contactPage .contactForm .cont input:-webkit-autofill {
+    -webkit-text-fill-color: #8d8d8d !important;
+    -webkit-box-shadow: 0 0 0 30px #2b2b2b inset !important;
+  }
+  .contactPage .contactForm .cont input:-webkit-autofill:hover,
+.contactPage .contactForm .cont input:-webkit-autofill:focus,
+.contactPage .contactForm .cont input:-webkit-autofill:active {
+    -webkit-box-shadow: 0 0 0 30px #2b2b2b inset !important;
+  }
   .contactPage .contactForm .cont textarea {
     resize: none;
     width: 100%;
     height: 200px;
     padding: 20px;
-    font-family: "";
+    font-family: sans-serif;
   }
   .contactPage .contactForm .cont .samething {
     font-size: 16px;
     box-sizing: border-box;
     outline: none;
-    border: 1px solid black;
+    border: 0;
     margin-bottom: 30px;
-    border-radius: 4px;
+    background-color: #2b2b2b;
+    color: #8d8d8d;
   }
   .contactPage .contactForm button {
     width: 200px;
     height: 50px;
-    border-radius: 5px;
-    border: none;
-    color: white;
-    background-color: black;
+    border: 1px solid #08fdd8;
+    color: #08fdd8;
+    background-color: #1d1d1d;
     font-weight: 500;
     font-size: 18px;
     cursor: pointer;
@@ -448,7 +472,7 @@
 }
 .resumeCont .resumeAbout a {
   text-decoration: none;
-  color: black;
+  color: #08fdd8;
   font-weight: bold;
   margin: 0 3px;
 }
@@ -459,7 +483,6 @@
 .resumeCont .resume-img {
   width: 100%;
   height: 100%;
-  border: 1px solid black;
 }
 .resumeCont .resume-img img {
   width: 100%;
@@ -467,6 +490,11 @@
 }
 
 @media screen and (max-width: 120000px) {
+  body {
+    background-color: #1d1d1d;
+    color: #8d8d8d;
+  }
+
   .mainCont {
     max-width: 1110px;
     padding: 0 15px;
@@ -483,6 +511,7 @@
     font-weight: bold;
     text-transform: capitalize;
     margin: 70px 0 20px 0;
+    color: white;
   }
 }
 @media screen and (max-width: 1200px) {
