--- a/src/App.scss
+++ b/src/App.scss
@@ -5,7 +5,18 @@
 @import "./pages/contact/ContactPage.scss";
 @import "./pages/resume/ResumePage.scss";
 
+$light: white;
+$dark: black;
+$color1: #08fdd8;
+$color2: #64ffda;
+$back1: #1d1d1d;
+$back2: #0a192f;
+
 @media screen and (max-width: 120000px) {
+    body {
+        background-color: $back1;
+        color: #8d8d8d;
+    }
     .mainCont {
         max-width: 1110px;
         padding: 0 15px;
@@ -15,12 +26,13 @@
             width: 920px;
             margin: 0 auto;
             padding: 0 15px;
-
+        
             .mainTitle {
                 font-size: 50px;
                 font-weight: bold;
                 text-transform: capitalize;
                 margin: 70px 0 20px 0;
+                color: white;
             }
         }
     }
