--- a/src/layouts/header/Header.scss
+++ b/src/layouts/header/Header.scss
@@ -24,14 +24,14 @@
                     position: absolute;
                     height: 3px;
                     width: 13px;
-                    background-color: #212121;
+                    background-color: white;
                   
                   &:before{      
                     transition-duration: 0.5s;
                     position: absolute;
                     width: 13px;
                     height: 3px;
-                    background-color: #212121;
+                    background-color: white;
                     content: "";
                     top: -9px;
                   }
@@ -41,7 +41,7 @@
                     position: absolute;
                     width: 13px;
                     height: 3px;
-                    background-color: #212121;
+                    background-color: white;
                     content: "";
                     top: 9px;
                   }
@@ -51,7 +51,7 @@
                     position: absolute;
                     height: 3px;
                     width: 13px;
-                    background-color: #212121;
+                    background-color: white;
                     right: 0;
                   
                     &:before{
@@ -59,7 +59,7 @@
                         position: absolute;
                         width: 13px;
                         height: 3px;
-                        background-color: #212121;
+                        background-color: white;
                         content: "";
                         top: -9px;
                     }
@@ -69,7 +69,7 @@
                         position: absolute;
                         width: 13px;
                         height: 3px;
-                        background-color: #212121;
+                        background-color: white;
                         content: "";
                         top: 9px;
                     }
@@ -111,6 +111,12 @@
                     display: flex;
                     padding: 0;
                     margin: 0;
+                    .routeActive {
+                        border-bottom: 1px solid white;
+                        a {
+                            color: white;
+                        }
+                    }
 
                     a {
                         text-decoration: none;
@@ -118,11 +124,7 @@
                         cursor: pointer;
                         text-transform: capitalize;
                         display: block;
-                        color: black;
-                    }
-                    .routeActive {
-                        color: black;
-                        border-bottom: 1px solid black;
+                        color: #08fdd8;
                     }
 
                     .liBottomHover::after {
@@ -139,11 +141,19 @@
                     }
 
                     .liBottomHover:hover:after {
-                        background: black;
+                        background: #08fdd8;
                         width: 100%
 
                     }
                 }
+
+                .daynight {
+                    width: 40px;
+                    height: 40px;
+                    margin-left: 30px;
+                    cursor: pointer;
+                }
+
             }
         }
     }
@@ -193,7 +203,7 @@
                 left: 0;
                 width: 100%;
                 height: 100%;
-                background-color: red;
+                background-color: #1d1d1d;
                 padding-top: 70px;
 
                 ul {
