--- a/src/pages/contact/ContactPage.scss
+++ b/src/pages/contact/ContactPage.scss
@@ -4,7 +4,7 @@
         .desc {
             margin-bottom: 40px;
             span {
-
+                color: #08fdd8;
                 font-weight: 500;
             }
         }
@@ -18,22 +18,32 @@
                     height: 50px;
                     padding: 0px 20px;
                 }
+                input:-webkit-autofill{
+                    -webkit-text-fill-color: #8d8d8d !important;
+                    -webkit-box-shadow: 0 0 0 30px #2b2b2b inset !important;
+                }
+                input:-webkit-autofill:hover, 
+                input:-webkit-autofill:focus, 
+                input:-webkit-autofill:active{
+                   -webkit-box-shadow: 0 0 0 30px #2b2b2b inset !important;
+                }
         
                 textarea {
                     resize: none;
                     width: 100%;
                     height: 200px;
                     padding: 20px;
-                    font-family: '';
+                    font-family: sans-serif;
                 }
 
                 .samething {
                     font-size: 16px;
                     box-sizing: border-box;
                     outline: none;
-                    border: 1px solid black;
+                    border: 0;
                     margin-bottom: 30px;
-                    border-radius: 4px;
+                    background-color: #2b2b2b;
+                    color: #8d8d8d;
                 }
     
             }
@@ -41,10 +51,9 @@
             button {
                 width: 200px;
                 height: 50px;
-                border-radius: 5px;
-                border: none;
-                color: white;
-                background-color: black;
+                border: 1px solid #08fdd8;
+                color: #08fdd8;
+                background-color: #1d1d1d;
                 font-weight: 500;
                 font-size: 18px;
                 cursor: pointer;
