--- a/src/pages/home/Home.scss
+++ b/src/pages/home/Home.scss
@@ -5,6 +5,7 @@
                 font-size: 60px;
                 font-weight: 800;
                 text-transform: capitalize;
+                color: white;
             }
     }
 
@@ -14,6 +15,10 @@
 
 }
 
-@media screen and (max-width: 676px) {
-
+@media screen and (max-width: 510px) {
+    .homePage {
+        .name {
+            font-size: 42px;
+        }
+    }
 }
