--- a/src/pages/resume/ResumePage.scss
+++ b/src/pages/resume/ResumePage.scss
@@ -5,7 +5,7 @@
 
         a {
             text-decoration: none;
-            color: black;
+            color: #08fdd8;
             font-weight: bold;
             margin: 0 3px;
 
@@ -18,7 +18,6 @@
     .resume-img {
         width: 100%;
         height: 100%;
-        border: 1px solid black;
         img {
             width: 100%;
             height: 100%;
