--- a/src/App.css
+++ b/src/App.css
@@ -51,6 +51,13 @@
     width: 1140px;
     margin: 0 auto;
   }
+  .header .container .logo {
+    width: 30px;
+    height: 30px;
+  }
+  .header .container .logo img {
+    width: 100%;
+  }
   .header .container .burgerMenu {
     display: none;
     width: 26px;
@@ -184,11 +191,6 @@
   }
   .header .container .logo {
     z-index: 999;
-    width: 30px;
-    height: 30px;
-  }
-  .header .container .logo img {
-    width: 100%;
   }
   .header .container .burgerMenu {
     display: flex;
@@ -271,7 +273,7 @@
   }
 }
 @media screen and (max-width: 999px) {
-  .socialCont {
+  .footer .socialCont {
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
     position: fixed;
     display: flex;
@@ -284,14 +286,15 @@
     justify-content: space-evenly;
     align-items: center;
     backdrop-filter: blur(10px) saturate(2.5);
+    padding: 0 20px;
   }
-  .socialCont a {
+  .footer .socialCont a {
     width: 24px;
     height: 24px;
     line-height: 24px;
     text-align: center;
   }
-  .socialCont a svg {
+  .footer .socialCont a svg {
     font-size: 18px !important;
   }
 }
