--- a/src/layouts/footer/Footer.scss
+++ b/src/layouts/footer/Footer.scss
@@ -21,27 +21,30 @@
 }
 
 @media screen and (max-width: 999px) {
-    .socialCont {
-        box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-        position: fixed;
-        display: flex;
-        justify-content: space-between;
-        bottom: 0px;
-        right: 0px;
-        width: 100%;
-        height: 60px;
-        display: flex;
-        justify-content: space-evenly;
-        align-items: center;
-        backdrop-filter: blur(10px) saturate(2.5);
-        a {
-            width: 24px;
-            height:24px;
-            line-height: 24px;
-            text-align: center;
-            svg {
-                font-size: 18px!important;
-
+    .footer {
+        .socialCont {
+            box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+            position: fixed;
+            display: flex;
+            justify-content: space-between;
+            bottom: 0px;
+            right: 0px;
+            width: 100%;
+            height: 60px;
+            display: flex;
+            justify-content: space-evenly;
+            align-items: center;
+            backdrop-filter: blur(10px) saturate(2.5);
+            padding: 0 20px;
+            a {
+                width: 24px;
+                height:24px;
+                line-height: 24px;
+                text-align: center;
+                svg {
+                    font-size: 18px!important;
+    
+                }
             }
         }
     }
